fixed overlapping text at desktop media query on services page

--- a/sass/components/content/_services.scss
+++ b/sass/components/content/_services.scss
@@ -138,12 +138,12 @@
                         grid-row: 1/3;
                         grid-column: 2/3;
                         margin: 3rem 2rem 2rem;
-                        padding: 2.5rem;
+                        padding: 2rem;
                     }
                      span {
                         grid-row: 2/3;
                         grid-column: 2/3;
-                        padding-top: 1.5rem;
+                        padding-top: 3rem;
 
                     }
                      img {
@@ -152,7 +152,7 @@
                         border: none;
                         border-right: $border;
                         object-fit: cover;
-
+                        min-height: 20rem;
                         height: 100%;
                         width: 100%;
                     }
@@ -193,6 +193,9 @@
                      .products {
                     li.product { 
                         min-width: 70rem;
+                        p {
+                            padding-top: 3rem;
+                        }
                         .contact-cta {
                             right: 27%;
                         }
